# mmkr

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  mmkr_verify.py  pyproject.toml  run_consciousness.py
.github/workflows/: test.yml
blog_examples/fold_intro/: capabilities_demo.py  fold_basics.py  natural_selection_demo.py  tick_pipeline.py
blog_examples/minimal_agent/: run.py
docs/: architecture.md  variants.md
docs/economics/: service_catalog.json
docs/integrations/: README.md  hydra.md  netherbrain.md  slopometry.md  syke.md
docs/planning/: day171_plan.txt  day172_plan.txt  day173_plan.txt
docs/self_study/: SELF_MAP.md
examples/: minimal_agent.py  two_pillar_agent.py
integrations/: __init__.py  gobby_adapter.py  hydra_ingestor.py  initrunner_collector.py  kalibr_collector.py  mindmem_collector.py  netherbrain_adapter.py  opensable_collector.py  pythonclaw_adapter.py  pythonclaw_collector.py  slopometry_collector.py  syke_adapter.py
integrations/llmify/: README.md  __init__.py  claude_provider.py  context.py  contract.py  programs.py  prompts.py  provider.py  results.py
scripts/: demo_guard_run.py  test_telegram_gate.py
src/mmkr/: __init__.py  agency.py  caps.py  cognitive.py  evolution.py  git_brain.py  inner_life.py  knowledge.py  life.py  personal_kanban_cron.py  publication_preflight.py  state.py  telegram.py  telegram_quality_gate.py  trace.py
tests/: __init__.py  test_integrations.py
variants/: README.md
variants/coder/: .env.example  Dockerfile  README.md  run_coder.py
(+22 files in other folders)
