[project]
name = "mmkr"
version = "0.1.0"
description = "autonomous life on emergent — fold-based agent architecture"
requires-python = ">=3.14"
authors = [{ name = "prostomarkeloff" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "emergent",
    "funcai",
    "llmify",
    "deployme",
    "pydantic>=2.12.0",
    "anthropic>=0.80.0",
    "playwright",
    "aiofiles>=24.1.0",
    "eth-account>=0.13.0",
    "telegrinder>=1.0.0",
]

[tool.uv.sources]
# Override these to point at your local checkouts or PyPI releases
# emergent = { path = "../emergent", editable = true }
# funcai = { git = "https://github.com/prostomarkeloff/funcai.git" }
# llmify = { path = "../llmify" }
# deployme = { path = "../deployme.py", editable = true }
telegrinder = { git = "https://github.com/timoniq/telegrinder", tag = "v1.0.0rc2" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mmkr"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
